.kube-monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
  - host: prometheus.flooq.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-stack-prometheus-kube-prometheus
            port:
              number: 9090
  - host: monitor.flooq.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-stack-prometheus-grafana
            port:
              number: 3000
